version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Mechanical/Fields/Field.rst.txt
.. vale off



:class:`Field`
==============

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Mechanical.Fields.Field

   Bases: :py:obj:`object`


   
   Represents a discrete or continuous field that can be used in a component of a boundary condition from Mechanical, for instance.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Field

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Inputs`
            - Gets the input variables of this component.
          * - :py:attr:`~Name`
            - Gets the name of this component.
          * - :py:attr:`~Output`
            - Gets the output variable of this component.







Property detail
---------------
.. py:property:: Inputs
   :type: Optional[List[Ansys.ACT.Mechanical.Fields.Variable]]


   
   Gets the input variables of this component.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the name of this component.
















   ..
       !! processed by numpydoc !!

.. py:property:: Output
   :type: Optional[Ansys.ACT.Mechanical.Fields.Variable]


   
   Gets the output variable of this component.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: ToString(isForJournal: bool) -> str
               ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on